{
    "name": "InputActions",
    "maps": [
        {
            "name": "Game",
            "id": "35dc5639-89d9-4ee4-9266-a53f3dc22fc2",
            "actions": [
                {
                    "name": "LeftMouseButtonAction",
                    "type": "Button",
                    "id": "d644e32f-a9a5-4957-ab14-b3f1b478ea81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseButtonAction",
                    "type": "Button",
                    "id": "ad960fba-1314-4248-8db1-4a893ffdc28c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2f6da509-8ffb-46ea-96c8-5df059787517",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7073368-cc7d-44c4-be69-1d915f02b08e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButtonAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a82c052f-bf7c-4638-8d91-bd9841b66cda",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseButtonAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df858d4d-4f10-4651-bebc-c04186beb6ce",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}